--- a/src/assets/examples/select-basic/select-basic.component.html
+++ b/src/assets/examples/select-basic/select-basic.component.html
@@ -1,6 +1,7 @@
 <div class="example-wrapper">
   <mat-form-field class="example-full-width">
     <mat-select
+      vizSelect
       placeholder="Date Type"
       disableOptionCentering
       disableRipple
