--- a/src/assets/documents/components/login.html
+++ b/src/assets/documents/components/login.html
@@ -10,8 +10,11 @@
   </div>
   <div class="doc-title-1">
     Login </div>
+  <!-- <div class="doc-desc-1">
+    Users are requires to login to fully access to Vizient MDA dashboards. </div> -->
   <div class="doc-desc-1">
-    Users are requires to login to fully access to Vizient MDA dashboards. </div>
+    Here’s the login UI example from Okta
+  </div>
 
   <div class="doc-divider">
   </div>
@@ -23,7 +26,9 @@
   <div class="doc-desc-2">
     Login is a required step to enter Vizient MDA dashboards. </div>
   <div class="doc-example-container">
-    <div app-docs-example="login-basic"></div>
+    <!-- <div app-docs-example="login-basic"></div> -->
+    
+    <div app-docs-example="login-okta"></div>
   </div>
   <div class="doc-divider">
   </div>
@@ -81,7 +86,7 @@
   </div>
 
 
-  <div class="doc-title-2">
+  <!-- <div class="doc-title-2">
     Usage &amp; Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
@@ -139,7 +144,7 @@
   </div>
   <div sketch-link=""></div>
 
-
+ -->
 
 
 </body>
