create file upload component

--- a/src/assets/documents/components/login.html
+++ b/src/assets/documents/components/login.html
@@ -60,7 +60,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="doc-divider"></div>
+  <!-- <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
     <span class="docs-markdown-h3" id="best_practices">
@@ -78,7 +78,7 @@
 
   <div class="doc-divider">
 
-  </div>
+  </div> -->
 
 
   <div class="doc-title-2">
