--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
       routerLinkActive 
       #rla1="routerLinkActive"
       [active]="!rla3.isActive && !rla4.isActive && rla1.isActive">
-      <span class="tab-item">TOOLKIT</span>
+      <span class="tab-item">WELCOME</span>
     </a>
     <a mat-tab-link
       routerLink="/components"
@@ -44,6 +44,6 @@
 </viz-header>
 <div class="main-sec">
     <router-outlet></router-outlet>
-    <viz-footer [brands] = "options" title="Vizient MDA"></viz-footer>
+    <viz-footer [brands] = "options" title="Vizient Toolkit"></viz-footer>
 </div>
 
