--- a/src/assets/documents/components/login.html
+++ b/src/assets/documents/components/login.html
@@ -39,7 +39,7 @@
   </div>
   <div class="doc-desc-2">
     To get a customized login, just set
-    <span class="doc-desc-2-highlight">forgetPasswordLink/loginOnClick</span>
+    <span class="doc-desc-2-highlight">forgetPasswordLink/loginOnClick/thumbnail</span>
   </div>
   <table class="doc-props-table">
     <thead>
@@ -61,6 +61,12 @@
         <td>loginOnClick</td>
         <td>The callback function that is triggered when login button is pressed.</td>
         <td>function(e)</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>thumbnail</td>
+        <td>The URL for image</td>
+        <td>string</td>
         <td></td>
       </tr>
     </tbody>
