--- a/libs/components/footer/viz-footer.component.html
+++ b/libs/components/footer/viz-footer.component.html
@@ -18,6 +18,6 @@
   <div class="footer-center" [class.footer-top]="isBrands()">
     <p>{{title}}</p>
     <!-- <p>&copy; 2018 Vizient & iLabs. All Rights Reserved.</p> -->
-    <p>&copy; 2018 Vizient. All Rights Reserved.</p>
+    <p>&copy; {{year}} Vizient. All Rights Reserved.</p>
   </div>
 </div>
