--- a/src/app/pages/components/components.component.scss
+++ b/src/app/pages/components/components.component.scss
@@ -126,6 +126,7 @@
         margin-right: 16px;
         padding: 3px;
         box-sizing: border-box;
+        color: #018dab;
         img {
           width: 24px;
           height: 24px;
