Colors page: add 8% color value

--- a/src/document.scss
+++ b/src/document.scss
@@ -382,9 +382,12 @@ a {
   opacity: 0.04;
 }
 .doc-color-level2 {
-  opacity: 0.12;
+  opacity: 0.08;
 }
 .doc-color-level3 {
+  opacity: 0.12;
+}
+.doc-color-level4 {
   opacity: 0.16;
 }
 .doc-color-name {
