--- a/src/assets/documents/components/colors.html
+++ b/src/assets/documents/components/colors.html
@@ -37,15 +37,20 @@
     <div class="doc-color-block doc-color-border-top">
       <div class="doc-color-background doc-color-orange doc-color-level1"></div>
       <span class="doc-color-name">viz-orange</span>
-      <span class="doc-color-opacity">#FF4E00, 4%</span>
+      <span class="doc-color-opacity">#FF4E00, 04%</span>
     </div>
     <div class="doc-color-block">
       <div class="doc-color-background doc-color-orange doc-color-level2"></div>
       <span class="doc-color-name">viz-orange</span>
-      <span class="doc-color-opacity">#FF4E00, 12%</span>
+      <span class="doc-color-opacity">#FF4E00, 08%</span>
     </div>
     <div class="doc-color-block">
       <div class="doc-color-background doc-color-orange doc-color-level3"></div>
+      <span class="doc-color-name">viz-orange</span>
+      <span class="doc-color-opacity">#FF4E00, 12%</span>
+    </div>
+    <div class="doc-color-block">
+      <div class="doc-color-background doc-color-orange doc-color-level4"></div>
       <span class="doc-color-name">viz-orange</span>
       <span class="doc-color-opacity">#FF4E00, 16%</span>
     </div>
@@ -74,15 +79,20 @@
     <div class="doc-color-block doc-color-border-top">
       <div class="doc-color-background doc-color-purple doc-color-level1"></div>
       <span class="doc-color-name">viz-purple</span>
-      <span class="doc-color-opacity">#7F5EBA, 4%</span>
+      <span class="doc-color-opacity">#7F5EBA, 04%</span>
     </div>
     <div class="doc-color-block">
-      <div class="doc-color-background doc-color-purple doc-color-level2"></div>
+        <div class="doc-color-background doc-color-purple doc-color-level2"></div>
+        <span class="doc-color-name">viz-purple</span>
+        <span class="doc-color-opacity">#7F5EBA, 08%</span>
+    </div>
+    <div class="doc-color-block">
+      <div class="doc-color-background doc-color-purple doc-color-level3"></div>
       <span class="doc-color-name">viz-purple</span>
       <span class="doc-color-opacity">#7F5EBA, 12%</span>
     </div>
     <div class="doc-color-block">
-      <div class="doc-color-background doc-color-purple doc-color-level3"></div>
+      <div class="doc-color-background doc-color-purple doc-color-level4"></div>
       <span class="doc-color-name">viz-purple</span>
       <span class="doc-color-opacity">#7F5EBA, 16%</span>
     </div>
@@ -115,15 +125,20 @@
     <div class="doc-color-block doc-color-border-top">
       <div class="doc-color-background doc-color-blue doc-color-level1"></div>
       <span class="doc-color-name">viz-blue</span>
-      <span class="doc-color-opacity">#01ADAB, 4%</span>
+      <span class="doc-color-opacity">#01ADAB, 04%</span>
     </div>
     <div class="doc-color-block">
-      <div class="doc-color-background doc-color-blue doc-color-level2"></div>
+        <div class="doc-color-background doc-color-blue doc-color-level2"></div>
+        <span class="doc-color-name">viz-blue</span>
+        <span class="doc-color-opacity">#01ADAB, 08%</span>
+    </div>
+    <div class="doc-color-block">
+      <div class="doc-color-background doc-color-blue doc-color-level3"></div>
       <span class="doc-color-name">viz-blue</span>
       <span class="doc-color-opacity">#01ADAB, 12%</span>
     </div>
     <div class="doc-color-block">
-      <div class="doc-color-background doc-color-blue doc-color-level3"></div>
+      <div class="doc-color-background doc-color-blue doc-color-level4"></div>
       <span class="doc-color-name">viz-blue</span>
       <span class="doc-color-opacity">#01ADAB, 16%</span>
     </div>
@@ -153,15 +168,20 @@
       <div class="doc-color-block doc-color-border-top">
         <div class="doc-color-background doc-color-yellow doc-color-level1"></div>
         <span class="doc-color-name">viz-yellow</span>
-        <span class="doc-color-opacity">#FFC02E, 4%</span>
+        <span class="doc-color-opacity">#FFC02E, 04%</span>
       </div>
       <div class="doc-color-block">
         <div class="doc-color-background doc-color-yellow doc-color-level2"></div>
         <span class="doc-color-name">viz-yellow</span>
-        <span class="doc-color-opacity">#FFC02E, 12%</span>
+        <span class="doc-color-opacity">#FFC02E, 08%</span>
       </div>
       <div class="doc-color-block">
         <div class="doc-color-background doc-color-yellow doc-color-level3"></div>
+        <span class="doc-color-name">viz-yellow</span>
+        <span class="doc-color-opacity">#FFC02E, 12%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-yellow doc-color-level4"></div>
         <span class="doc-color-name">viz-yellow</span>
         <span class="doc-color-opacity">#FFC02E, 16%</span>
       </div>
@@ -176,15 +196,20 @@
       <div class="doc-color-block doc-color-border-top">
         <div class="doc-color-background doc-color-green doc-color-level1"></div>
         <span class="doc-color-name">viz-green</span>
-        <span class="doc-color-opacity">#9CD020, 4%</span>
+        <span class="doc-color-opacity">#9CD020, 04%</span>
       </div>
       <div class="doc-color-block">
         <div class="doc-color-background doc-color-green doc-color-level2"></div>
         <span class="doc-color-name">viz-green</span>
-        <span class="doc-color-opacity">#9CD020, 12%</span>
+        <span class="doc-color-opacity">#9CD020, 08%</span>
       </div>
       <div class="doc-color-block">
         <div class="doc-color-background doc-color-green doc-color-level3"></div>
+        <span class="doc-color-name">viz-green</span>
+        <span class="doc-color-opacity">#9CD020, 12%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-green doc-color-level4"></div>
         <span class="doc-color-name">viz-green</span>
         <span class="doc-color-opacity">#9CD020, 16%</span>
       </div>
@@ -199,15 +224,20 @@
       <div class="doc-color-block doc-color-border-top">
         <div class="doc-color-background doc-color-gray doc-color-level1"></div>
         <span class="doc-color-name">viz-gray</span>
-        <span class="doc-color-opacity">#696969, 4%</span>
+        <span class="doc-color-opacity">#696969, 04%</span>
       </div>
       <div class="doc-color-block">
         <div class="doc-color-background doc-color-gray doc-color-level2"></div>
         <span class="doc-color-name">viz-gray</span>
-        <span class="doc-color-opacity">#696969, 12%</span>
+        <span class="doc-color-opacity">#696969, 08%</span>
       </div>
       <div class="doc-color-block">
         <div class="doc-color-background doc-color-gray doc-color-level3"></div>
+        <span class="doc-color-name">viz-gray</span>
+        <span class="doc-color-opacity">#696969, 12%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-gray doc-color-level4"></div>
         <span class="doc-color-name">viz-gray</span>
         <span class="doc-color-opacity">#696969, 16%</span>
       </div>
@@ -222,15 +252,20 @@
       <div class="doc-color-block doc-color-border-top">
         <div class="doc-color-background doc-color-black doc-color-level1"></div>
         <span class="doc-color-name">viz-black</span>
-        <span class="doc-color-opacity">#000000, 4%</span>
+        <span class="doc-color-opacity">#000000, 04%</span>
       </div>
       <div class="doc-color-block">
         <div class="doc-color-background doc-color-black doc-color-level2"></div>
         <span class="doc-color-name">viz-black</span>
-        <span class="doc-color-opacity">#000000, 12%</span>
+        <span class="doc-color-opacity">#000000, 08%</span>
       </div>
       <div class="doc-color-block">
         <div class="doc-color-background doc-color-black doc-color-level3"></div>
+        <span class="doc-color-name">viz-black</span>
+        <span class="doc-color-opacity">#000000, 12%</span>
+      </div>
+      <div class="doc-color-block">
+        <div class="doc-color-background doc-color-black doc-color-level4"></div>
         <span class="doc-color-name">viz-black</span>
         <span class="doc-color-opacity">#000000, 16%</span>
       </div>
