--- a/src/assets/documents/components/buttontoggle.html
+++ b/src/assets/documents/components/buttontoggle.html
@@ -13,7 +13,7 @@
   </div>
   <div class="doc-desc-1">
     Button toggles is are on/off toggles with the appearance of a button. These toggles
-    can be configured to behave as either radio-buttons or checkboxes. 
+    can be configured to behave as either radio-buttons or checkboxes.
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
@@ -41,26 +41,36 @@
   </div>
 
   <div class="doc-title-4 mb-8">
-    Two text toggle<span modified-label=""></span> 
+    Two text toggle
+    <span modified-label=""></span>
   </div>
   <div class="doc-example-container">
     <div app-docs-example="buttontoggle-two-text"></div>
   </div>
 
   <div class="doc-title-4 mb-8">
-    Three icon toggle<span modified-label=""></span>
+    Three icon toggle
+    <span modified-label=""></span>
   </div>
   <div class="doc-example-container">
     <div app-docs-example="buttontoggle-three-icon"></div>
   </div>
 
   <div class="doc-title-4 mb-8">
-    Two icon toggle<span modified-label=""></span>
+    Two icon toggle
+    <span modified-label=""></span>
   </div>
   <div class="doc-example-container">
     <div app-docs-example="buttontoggle-two-icon"></div>
   </div>
-  
+
+  <div class="doc-title-4 mb-8">
+    Secondary color: Gray toggle
+    <span modified-label=""></span>
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="buttontoggle-secondary-color"></div>
+  </div>
 
 
   <div class="doc-divider">
@@ -102,8 +112,11 @@
   <div class="doc-desc-2">
     Button toggles should:
     <ul class="doc-list">
-      <li>Familiar: Selection controls have been in user interfaces for a long time and should be used as expected.</li>
-      <li>Scannable: It should be visible at a glance if a selection control has been selected, and selected items should be more visually prominent than unselected items.</li>
+      <li>Familiar: Selection controls have been in user interfaces for a long time and
+        should be used as expected.</li>
+      <li>Scannable: It should be visible at a glance if a selection control has been
+        selected, and selected items should be more visually prominent than unselected
+        items.</li>
       <li>Efficient: Button toggles make it easy to compare available options.</li>
     </ul>
   </div>
@@ -129,7 +142,7 @@
       <img src="assets/img/doc/buttontoggle-dont.png" alt="">
     </div>
   </div>
-  
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Design Specs
