--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -4,10 +4,10 @@
   border: 1px solid #efefef;
   ::ng-deep {
     .mat-tab-label {
-      padding: 0 0;
+      // padding: 0 0;
       // max-width: 80px;
-      min-width: 0;
-      margin-left: 20px;
+      // min-width: 0;
+      // margin-left: 20px;
     }
   }
 }
