--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -35,7 +35,26 @@
     <div app-docs-example="tabs"></div>
   </div>
 
+  <div class="doc-title-4 mb-16">
+    Using Tabs with a Custom Label Template 
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="tabs-custom-label"></div>
+  </div>
 
+  <div class="doc-title-4 mb-16">
+    Tab group with the headers on the bottom
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="tabs-header-bottom"></div>
+  </div>
+
+  <div class="doc-title-4 mb-16">
+    Customizing the Theme Options on the Tab Group
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="tabs-theme"></div>
+  </div>
 
   <div class="doc-title-4 mb-8">
     Simple Tabs
@@ -46,28 +65,13 @@
     <div app-docs-example="tabs-narrow"></div>
   </div>
 
-  <div class="doc-title-4 mb-16">
-    Customizing the Theme Options on the Tab Group
+  <div class="doc-title-4 mb-8">
+    Basic use of the tab nav bar
   </div>
   <div class="doc-example-container">
-    <div app-docs-example="tabs-theme"></div>
+    <div app-docs-example="tabs-nav-bar"></div>
   </div>
-
-
-
-  <div class="doc-title-4 mb-16">
-    Using Tabs with a Custom Label Template
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="tabs-custom-label"></div>
-  </div>
-
-
-
-
-
-
-
+  
 
   <div class="doc-divider">
   </div>
@@ -216,8 +220,6 @@
     </div>
   </div>
 
-
-
   <div class="doc-divider">
 
   </div>
@@ -229,8 +231,8 @@
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:346px">
-    <img src="assets/img/doc/tabs-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center-no-scale" style="height:346px">
+    <img src="assets/img/doc/tabs-spec.png" alt="" style="width: 80%">
   </div>
 
   <div class="doc-divider"></div>
