--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -1,13 +1,15 @@
+@import "../../viz-color";
 :host {
   // * {
   //   border: 1px black solid;
   // }
   font-family: Soleto;
+  color: $viz-orange;
   .nav-bar {
     background: #ffffff;
     z-index: 10;
     box-shadow: 0 1px 0 0 #e9e9e9;
-    padding: 0 15px;
+    padding: 0 15px 0 42px;
     position: relative;
 
     .navbar-wrapper {
@@ -130,7 +132,11 @@
 ::ng-deep {
   .cdk-overlay-pane .viz-header-application-dropdown{
     position: absolute;
-    left: -210px;
+    left: -110px;
+    .mat-menu-content {
+      width: auto !important;
+      min-width: 180px;
+    }
     .mat-menu-content .mat-menu-item:hover {
       color: #ff4e00;
     }
@@ -144,4 +150,7 @@
     }
   }
   
+  .viz-header-application-dropdown-member {
+    left: 0 !important;
+  }
 }
