--- a/src/assets/examples/header-basic/header-basic.component.scss
+++ b/src/assets/examples/header-basic/header-basic.component.scss
@@ -2,3 +2,119 @@
   // width: 736px;
   margin: 0 auto;
 }
+
+.header-application {
+  display: inline-flex;
+}
+
+.header-application-icon {
+  height: 72px;
+  width: 72px;
+  padding: 24px;
+  box-sizing: border-box;
+  border-left: 1px solid #e9e9e9;
+  cursor: pointer;
+
+  &-active {
+    background-color: rgba(#ff4e00, 0.16);
+  }
+  &:hover {
+    background-color: rgba(#ff4e00, 0.08);
+  }
+  &:active {
+    background-color: rgba(#ff4e00, 0.12);
+  }
+
+  &-badge {
+    span.mat-badge-content {
+      width: 14px !important;
+      height: 14px !important;
+      padding: 0px !important;
+      line-height: 14px !important;
+      font-size: 10px;
+    }
+  }
+}
+
+.header-application-list {
+  list-style: none;
+  /* padding: 0; */
+  padding: 8px 0px;
+  margin: 0px;
+
+  li {
+    padding: 18px 15px;
+    font-size: 12px;
+    line-height: 12px;
+    color: #696969;
+    font-family: soleto;
+    cursor: pointer;
+    &:hover {
+      background-color: rgba(#ff4e00, 0.08);
+      color: #ff4e00;
+    }
+  }
+}
+
+.login-info {
+  padding: 8px 16px;
+  font-family: Soleto;
+  font-size: 10px;
+  color: #696969;
+  text-align: left;
+  line-height: 16px;
+  border-bottom: 1px solid #ececec;
+
+  &-top {
+    font-weight: 500;
+  }
+}
+
+.control-panel {
+  display: flex;
+  height: 150px;
+  margin-left: 42px;
+
+  &-checkbox {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: baseline;
+    height: 18px;
+    color: #696969;
+    font-family: 'Soleto Trial';
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18px;
+    margin-right: 60px;
+    .mat-checkbox {
+      margin-bottom: 20px;
+    }
+  }
+  &-radio {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: baseline;
+    height: 18px;
+    color: #696969;
+    font-family: 'Soleto Trial';
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18px;
+    .mat-radio-button {
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.header-application-member {
+  display: flex;
+  height: 72px;
+  padding: 24px;
+  box-sizing: border-box;
+  border-left: 1px solid #e9e9e9;
+  cursor: pointer;
+  &-icon {
+    margin-left: 8px;
+  }
+}
+
