--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   brandLink="/" 
   type="rightMenu"
 >
-  <nav mat-tab-nav-bar class='detail-navigator pc-header'>
+  <nav mat-tab-nav-bar class='detail-navigator pc-header' headerApplications>
     <!-- <a mat-tab-link
       routerLink="/"
       routerLinkActive 
