--- a/src/assets/documents/components/header.html
+++ b/src/assets/documents/components/header.html
@@ -24,22 +24,31 @@
       <span header-link="examples"></span>Examples</span>
   </div>
 
-  <div class="doc-desc-2">
-    Header are a special kind of toolbar that&#x2019;s used for branding,
-    navigation, search, and actions.
+  <div class="doc-title-4 mb-16">
+    Configurable header
   </div>
+  <div class="doc-desc-2">
+    The Header is a special kind of toolbar that’s used for branding,
+    navigation, search, and actions.
+    Use the inputs below to configure and customize a header that fit your needs
+    best:
+  </div>
+  <div class="doc-title-4 mb-16">
+    Select the checkboxes and radio menu inputs
+  </div>
+
   <div class="doc-example-container">
     <div app-docs-example="header-basic"></div>
   </div>
 
 
-  <div class="doc-desc-2">
+  <!-- <div class="doc-desc-2">
     Application switcher in header is used for switching between applications
     within a product.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="header-application"></div>
-  </div>
+  </div> -->
 
 
   <div class="doc-divider">
@@ -51,7 +60,8 @@
   </div>
   <div class="doc-desc-2">
     To get a customized header, just set
-    <span class="doc-desc-2-highlight">title/userName/brandLink/svgIcon/type</span>
+    <span
+      class="doc-desc-2-highlight">title/userName/brandLink/svgIcon/type</span>
   </div>
   <table class="doc-props-table">
     <thead>
@@ -134,7 +144,8 @@
     <ul class="doc-list">
       <li>Persistent: Header appear at the top and bottom of each screen in an
         app, and can disappear upon scroll.</li>
-      <li>Guiding: Header provide a reliable way to guide users through an app.</li>
+      <li>Guiding: Header provide a reliable way to guide users through an app.
+      </li>
       <li>Consistent: Header have a consistent position and content to increase
         familiarity.</li>
       <li>Immediate: Header can be accessed from any scroll position.</li>
@@ -158,10 +169,12 @@
     line.
   </div>
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center"
+      style="height:160px">
       <img src="assets/img/doc/header-do.png" alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:24px">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center"
+      style="height:160px;margin-top:24px">
       <img src="assets/img/doc/header-dont.png" alt="">
     </div>
   </div>
@@ -172,8 +185,12 @@
       <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:248px">
+  <div class="docs-usage-spec docs-usage-center  mb-16" style="height:248px">
     <img src="assets/img/doc/header-spec.png" alt="">
+  </div>
+
+  <div class="docs-usage-spec docs-usage-center" style="height:248px">
+    <img src="assets/img/doc/header-user-spec.png" alt="">
   </div>
 
   <div class="doc-divider"></div>
@@ -182,7 +199,8 @@
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component
       Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
+  </div><a class="doc-download-link"
+    href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
     Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path
