--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -71,8 +71,8 @@
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
-    To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">type/state/disabled</span>
+    To get a customized tree, just set
+    <span class="doc-desc-2-highlight">tree</span>
   </div>
   <table class="doc-props-table">
     <thead>
