Toolkit-v2 https://trello.com/c/xKJgcgNj/240-dev-buttons-component

--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -17,52 +17,85 @@
     of action, including navigation.
   </div>
   <div class="doc-divider"></div>
-  <div class="doc-title-2">
+  <div class="doc-title-2 mb-24">
     Examples
     <span class="docs-more-example"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
-  <div class="doc-desc-2">
-    Used most in the interface. Only use another style if a button requires
-    more or less visual weight.
+  <div class="doc-title-4 mb-16">
+    Basic Buttons
   </div>
   <div class="doc-example-container">
     <div app-docs-example="button-basic"></div>
   </div>
 
+  <div class="doc-title-4 mb-16">
+    Raised Buttons
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-raised"></div>
+  </div>
 
-  <div class="doc-desc-2">
-    Use against shaded or colorful backgrounds.
+  <div class="doc-title-4 mb-16">
+    Flat Buttons
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-flat"></div>
+  </div>
+
+  <div class="doc-title-4 mb-16">
+    Stroked Buttons
   </div>
   <div class="doc-example-container">
     <div app-docs-example="button-stroked"></div>
   </div>
-  <div class="doc-desc-2">
-    Used as second action beside primary button in a section or screen.
+
+  <div class="doc-title-4 mb-16">
+    Icon Buttons
   </div>
   <div class="doc-example-container">
-    <div app-docs-example="button-text"></div>
+    <div app-docs-example="button-icon"></div>
   </div>
-  <div class="doc-desc-2">
+
+  <div class="doc-title-4 mb-16">
+    Floating Action Buttons
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-floating"></div>
+  </div>
+
+  <div class="doc-title-4 mb-16">
+    Mini Floating Action Buttons
+  </div>
+  <div class="doc-example-container">
+    <div app-docs-example="button-floating-mini"></div>
+  </div>
+
+  <div class="doc-title-4 mb-8">
+    Icon Buttons <span modified-label=""></span>
+  </div>
+  <div class="doc-desc-2 mb-16">
     Can be used when an action need to be emphasized.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="button-icon-left"></div>
   </div>
-  <div class="doc-desc-2">
+
+  <div class="doc-desc-2 mb-16">
     Can be used when an action need to be emphasized.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="button-icon-right"></div>
   </div>
-  <div class="doc-desc-2">
+
+  <!-- <div class="doc-desc-2">
     Use for actions that aren&#x2019;t currently available.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="button-disable"></div>
-  </div>
+  </div> -->
 
 
   <div class="doc-divider">
