--- a/src/assets/examples/button-icon-right/button-icon-right.component.html
+++ b/src/assets/examples/button-icon-right/button-icon-right.component.html
@@ -1,7 +1,7 @@
 <div class="example-wrapper">
-  <button mat-raised-button color="primary">
+  <button mat-flat-button color="primary">
     <div class="viz-button-right-icon">
-      Button
+      Icon Button
       <mat-icon>check</mat-icon>
     </div>
   </button>
