--- a/src/assets/examples/button-stroked/button-stroked.component.html
+++ b/src/assets/examples/button-stroked/button-stroked.component.html
@@ -1,3 +1,4 @@
 <div class="example-wrapper">
-  <button mat-stroked-button color="primary">Secondary</button>
+  <button mat-stroked-button color="primary" class="first-button">Button</button>
+  <button mat-stroked-button color="accent">Button</button>
 </div>
