--- a/src/assets/examples/button-basic/button-basic.component.html
+++ b/src/assets/examples/button-basic/button-basic.component.html
@@ -1,3 +1,4 @@
 <div class="example-wrapper">
-  <button mat-raised-button color="primary">Primary</button>
+  <button mat-button color="primary" class="first-button">Button</button>
+  <button mat-button color="accent">Button</button>
 </div>
