--- a/src/assets/documents/components/buttontoggle.html
+++ b/src/assets/documents/components/buttontoggle.html
@@ -33,12 +33,12 @@
     <div app-docs-example="buttontoggle-three-text"></div>
   </div>
 
-  <div class="doc-title-4 mb-8">
+  <!-- <div class="doc-title-4 mb-8">
     Three text toggles with an disabled toggle
   </div>
   <div class="doc-example-container">
     <div app-docs-example="buttontoggle-disable"></div>
-  </div>
+  </div> -->
 
   <div class="doc-title-4 mb-8">
     Two text toggle
