--- a/src/assets/examples/buttontoggle-three-icon/buttontoggle-three-icon.component.html
+++ b/src/assets/examples/buttontoggle-three-icon/buttontoggle-three-icon.component.html
@@ -1,12 +1,12 @@
 <div class="example-wrapper">
-  <mat-button-toggle-group #group="matButtonToggleGroup">
+  <mat-button-toggle-group #group="matButtonToggleGroup" name="fontStyle">
     <mat-button-toggle value="left" checked>
       <mat-icon>show_chart</mat-icon>
     </mat-button-toggle>
     <mat-button-toggle value="center">
       <mat-icon>format_align_justify</mat-icon>
     </mat-button-toggle>
-    <mat-button-toggle value="right">
+    <mat-button-toggle value="right" disabled>
       <mat-icon>pie_chart</mat-icon>
     </mat-button-toggle>
   </mat-button-toggle-group>
