--- a/src/assets/examples/buttontoggle-two-text/buttontoggle-two-text.component.html
+++ b/src/assets/examples/buttontoggle-two-text/buttontoggle-two-text.component.html
@@ -1,10 +1,10 @@
 <div class="example-wrapper">
   <mat-button-toggle-group #group="matButtonToggleGroup" class="viz-buttontoggle-text">
     <mat-button-toggle value="left" checked>
-      Left
+      Button
     </mat-button-toggle>
     <mat-button-toggle value="right">
-      Right
+      Button
     </mat-button-toggle>
   </mat-button-toggle-group>
 </div>
