--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -23,36 +23,38 @@
       <span header-link="examples"></span>Examples</span>
   </div>
 
-  <div class="doc-desc-2">
-    Use to represent a single selection in sets that contain at least two
-    options.
+  <div class="doc-title-3">
+    Basic chip
   </div>
+
   <div class="doc-example-container">
     <div app-docs-example="chip-basic"></div>
   </div>
 
 
-  <div class="doc-desc-2 docs-mt24">
-    Use to represent information used in fields, such as an entity or different
-    attributes.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="chip-close"></div>
-  </div>
-  <div class="doc-desc-2 docs-mt24">
-    Chip in alternative color.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="chip-primary"></div>
-  </div>
-  <div class="doc-desc-2 docs-mt24">
-    Use for chips that aren&#x2019;t currently available.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="chip-disable"></div>
+  <div class="doc-title-3">
+    Chip Autocomplete
   </div>
 
+  <div class="doc-example-container">
+    <div app-docs-example="chip-autocomplete"></div>
+  </div>
 
+  <div class="doc-title-3">
+    Chip with input
+  </div>
+
+  <div class="doc-example-container">
+    <div app-docs-example="chip-with-input"></div>
+  </div>
+
+  <div class="doc-title-3">
+    Stacked chips
+  </div>
+
+  <div class="doc-example-container">
+    <div app-docs-example="chip-stacked"></div>
+  </div>
 
 
   <div class="doc-divider">
