--- a/src/assets/examples/chip-basic/chip-basic.component.css
+++ b/src/assets/examples/chip-basic/chip-basic.component.css
@@ -4,5 +4,9 @@ mat-chip-list {
   /* margin-left: 100px; */
 }
 .mat-chip {
+  width: 95px;
+  display: inline;
+}
+.mat-chip {
   margin-left: 24px;
 }
