--- a/src/assets/examples/chip-basic/chip-basic.component.html
+++ b/src/assets/examples/chip-basic/chip-basic.component.html
@@ -1,3 +1,6 @@
 <mat-chip-list>
-  <mat-chip>Choice Chip</mat-chip>
+  <mat-chip color="primary" selected>Normal</mat-chip>
+  <mat-chip color="accent" selected>Normal</mat-chip>
+  <mat-chip color="accent" selected disabled>Disable</mat-chip>
+  <mat-chip color="primary" selected disabled>Disable</mat-chip>
 </mat-chip-list>
