toolkit-v2 update progress-spinner

--- a/src/assets/documents/components/progressspinner.html
+++ b/src/assets/documents/components/progressspinner.html
@@ -23,7 +23,7 @@
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Circular progress indicators support both determinate and indeterminate processes.</div>
+    Use this configuration below to customize progress spinner that fits your need best</div>
   <div class="doc-example-container">
     <div app-docs-example="progress-spinner-basic"></div>
   </div>
