--- a/src/assets/examples/progress-spinner-basic/progress-spinner-basic.component.css
+++ b/src/assets/examples/progress-spinner-basic/progress-spinner-basic.component.css
@@ -1,4 +1,18 @@
-.spinner-wrap{
-    margin: 0 auto;
-    width: 44px;
+.example-wrapper {
+  width: 330px;
+  margin: auto;
+}
+.example-h2 {
+  margin: 10px;
+}
+
+.example-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.example-margin {
+  margin: 0 10px;
 }
