toolkit-v2 update checkbox component

--- a/src/assets/examples/checkbox-basic/checkbox-basic.component.html
+++ b/src/assets/examples/checkbox-basic/checkbox-basic.component.html
@@ -1,3 +1,3 @@
 <div class="example-centralization">
-  <mat-checkbox checked="true"></mat-checkbox>
+  <mat-checkbox checked="true">Check me!</mat-checkbox>
 </div>
