--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -1,208 +1,196 @@
 <html>
+  <head></head>
 
-<head></head>
-
-<body>
-  <div class="doc-category-title ">
-    Form Control
-    <span class="docs-markdown-h3" id="contents">
-      <span header-link="contents"></span>Contents</span>
-  </div>
-  <div class="doc-title-1">
-    Checkbox
-  </div>
-
-  <div class="doc-desc-1">
-    Checkboxes allow the user to select one or more items from a set.
-    Checkboxes can be used to turn an option on or off.
-  </div>
-
-
-  <div class="doc-divider">
-  </div>
-  <div class="doc-title-2">
-    Examples
-
-    <span class="docs-more-example"></span>
-
-    <span class="docs-markdown-h3" id="examples">
-      <span header-link="examples"></span>Examples</span>
-
-  </div>
-
-  <div class="doc-title-4 mb-8">
-    Checkbox
-  </div>
-
-  <div class="doc-desc-2">
-    Checkboxes are for making selections from a list. They let users select
-    more than one item and allow for easy selection or
-    deselection of all items with a parent checkbox.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="checkbox-basic"></div>
-  </div>
-
-
-
-  <div class="doc-title-4 mb-8">
-    Indeterminate Checkbox
-  </div>
-  <div class="doc-desc-2">
-    When not all child checkboxes are checked, the parent checkbox becomes an
-    indeterminate checkbox.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="checkbox-indetermine"></div>
-  </div>
-
-  <div class="doc-title-4 mb-8">
-    Disabled Checkbox
-  </div>
-  <div class="doc-desc-2">
-    When checkbox is disabled, actions are unusable and un-clickable, it only
-    serves the purpose of a visual representation of
-    the data.
-  </div>
-  <div class="doc-example-container">
-    <div app-docs-example="checkbox-disable"></div>
-  </div>
-
-
-
-  <div class="doc-divider">
-  </div>
-
-  <div class="doc-title-2">
-    Props
-    <span class="docs-markdown-h3" id="props">
-      <span header-link="props"></span>Props</span>
-  </div>
-
-  <div class="doc-desc-2">
-    To get a customized checkbox, just set
-    <span class="doc-desc-2-highlight">type/state/disabled</span>
-  </div>
-
-  <table class="doc-props-table">
-    <thead>
-      <tr>
-        <th>property</th>
-        <th>description</th>
-        <th>type</th>
-        <th>default</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>checked</td>
-        <td>Specifies whether the checkbox is selected</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-      <tr>
-        <td>disabled</td>
-        <td>disabled state of checkbox</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-      <tr>
-        <td>indeterminate</td>
-        <td>Whether the checkbox is indeterminate</td>
-        <td>boolean</td>
-        <td>false</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="doc-divider"></div>
-
-  <div class="doc-title-2">
-    Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
-      <span header-link="best_practices"></span>Best Practices</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Use checkboxes to:
-    <ul class="doc-list">
-      <li>Select one or multiple items from a list</li>
-      <li>Present a list containing sub-selections</li>
-      <li>Turn an option on or off</li>
-    </ul>
-  </div>
-
-  <div class="doc-divider">
-  </div>
-
-  <div class="doc-title-2">
-    Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content Guidelines</span>
-  </div>
-
-  <div class="doc-desc-2">
-    Start with a capital letter
-  </div>
-
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/checkbox-capital-ok.png" alt="">
+  <body>
+    <div class="doc-category-title ">
+      Form Control
+      <span class="docs-markdown-h3" id="contents">
+        <span header-link="contents"></span>Contents</span
+      >
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/checkbox-capital-fail.png" alt="">
+    <div class="doc-title-1">
+      Checkbox
     </div>
-  </div>
 
-
-  <div class="doc-desc-2">
-    Avoid using button toggles for a list of options
-  </div>
-
-  <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/checkbox-list-do.png" alt="">
+    <div class="doc-desc-1">
+      Checkboxes allow the user to select one or more items from a set.
+      Checkboxes can be used to turn an option on or off.
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/checkbox-list-dont.png" alt="">
+
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Examples
+
+      <span class="docs-more-example"></span>
+
+      <span class="docs-markdown-h3" id="examples">
+        <span header-link="examples"></span>Examples</span
+      >
     </div>
-  </div>
 
-  <div class="doc-divider">
+    <div class="doc-title-4 mb-8">
+      Checkbox
+    </div>
 
-  </div>
+    <div class="doc-desc-2">
+      Checkboxes are for making selections from a list. They let users select
+      more than one item and allow for easy selection or deselection of all
+      items with a parent checkbox.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="checkbox-basic"></div>
+    </div>
 
-  <div class="doc-title-2">
-    Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design Specs</span>
-  </div>
+    <div class="doc-title-3">
+      Configurable checkbox
+    </div>
+    <div class="doc-desc-2">
+      Use this configuration below to customize a checkbox that fit your needs best: 
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="checkbox-configurable"></div>
+    </div>
 
+    <div class="doc-divider"></div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/checkbox-design.png" alt="">
-  </div>
+    <div class="doc-title-2">
+      Props
+      <span class="docs-markdown-h3" id="props">
+        <span header-link="props"></span>Props</span
+      >
+    </div>
 
-  <div class="doc-divider"></div>
-  <div class="doc-title-2">
-    Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
-      <span header-link="component_location_for_designers"></span>Component
-      Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
-    Sektch File</a>
-  <div class="doc-desc-2">
-    For designers, to add this component to your design, follow this path
-    within the Sketch App UI:
-  </div>
-  <div sketch-link=""></div>
+    <div class="doc-desc-2">
+      To get a customized checkbox, just set
+      <span class="doc-desc-2-highlight">type/state/disabled</span>
+    </div>
 
+    <table class="doc-props-table">
+      <thead>
+        <tr>
+          <th>property</th>
+          <th>description</th>
+          <th>type</th>
+          <th>default</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>checked</td>
+          <td>Specifies whether the checkbox is selected</td>
+          <td>boolean</td>
+          <td>false</td>
+        </tr>
+        <tr>
+          <td>disabled</td>
+          <td>disabled state of checkbox</td>
+          <td>boolean</td>
+          <td>false</td>
+        </tr>
+        <tr>
+          <td>indeterminate</td>
+          <td>Whether the checkbox is indeterminate</td>
+          <td>boolean</td>
+          <td>false</td>
+        </tr>
+      </tbody>
+    </table>
 
+    <div class="doc-divider"></div>
 
+    <div class="doc-title-2">
+      Best Practices
+      <span class="docs-markdown-h3" id="best_practices">
+        <span header-link="best_practices"></span>Best Practices</span
+      >
+    </div>
 
+    <div class="doc-desc-2">
+      Use checkboxes to:
+      <ul class="doc-list">
+        <li>Select one or multiple items from a list</li>
+        <li>Present a list containing sub-selections</li>
+        <li>Turn an option on or off</li>
+      </ul>
+    </div>
 
+    <div class="doc-divider"></div>
 
+    <div class="doc-title-2">
+      Usage &amp; Content Guidelines
+      <span class="docs-markdown-h3" id="content_guidelines">
+        <span header-link="content_guidelines"></span>Content Guidelines</span
+      >
+    </div>
 
-</body>
+    <div class="doc-desc-2">
+      Start with a capital letter
+    </div>
 
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/checkbox-capital-ok.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/checkbox-capital-fail.png" alt="" />
+      </div>
+    </div>
+
+    <div class="doc-desc-2">
+      Avoid using button toggles for a list of options
+    </div>
+
+    <div class="docs-guideline-group">
+      <div
+        class="docs-usage-do docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/checkbox-list-do.png" alt="" />
+      </div>
+      <div
+        class="docs-usage-dont docs-usage-w50 docs-usage-center"
+        style="height:160px"
+      >
+        <img src="assets/img/doc/checkbox-list-dont.png" alt="" />
+      </div>
+    </div>
+
+    <div class="doc-divider"></div>
+
+    <div class="doc-title-2">
+      Design Specs
+      <span class="docs-markdown-h3" id="design_specs">
+        <span header-link="design_specs"></span>Design Specs</span
+      >
+    </div>
+
+    <div class="docs-usage-spec docs-usage-center" style="height:280px">
+      <img src="assets/img/doc/checkbox-design.png" alt="" />
+    </div>
+
+    <div class="doc-divider"></div>
+    <div class="doc-title-2">
+      Component Location for Designers
+      <span class="docs-markdown-h3" id="component_location_for_designers">
+        <span header-link="component_location_for_designers"></span>Component
+        Location for Designers</span
+      >
+    </div>
+    <a
+      class="doc-download-link"
+      href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch"
+      >Download Sektch File</a
+    >
+    <div class="doc-desc-2">
+      For designers, to add this component to your design, follow this path
+      within the Sketch App UI:
+    </div>
+    <div sketch-link=""></div>
+  </body>
 </html>
