toolkit-v2 update radio component

--- a/src/assets/documents/components/radio.html
+++ b/src/assets/documents/components/radio.html
@@ -33,13 +33,11 @@
 
 
 
-  <div class="doc-title-4 mb-8">Disabled Radio Button</div>
-  <div class="doc-desc-2">
-    When radio button is disabled, actions are unusable and un-clickable, it
-    only serves the purpose of a visual representation
-    of the data. </div>
+  <div class="doc-title-3">
+    Radios with ngModel
+  </div>
   <div class="doc-example-container">
-    <div app-docs-example="radio-button-disable"></div>
+    <div app-docs-example="radio-width-ngmodel"></div>
   </div>
 
 
