--- a/src/assets/examples/radio-button-basic/radio-button-basic.component.html
+++ b/src/assets/examples/radio-button-basic/radio-button-basic.component.html
@@ -1,4 +1,4 @@
-<div class="example-centralization">
-  <mat-radio-button value="1" checked="true">Option 1</mat-radio-button>
+<mat-radio-group aria-label="Select an option">
+  <mat-radio-button value="1" checked>Option 1</mat-radio-button>
   <mat-radio-button value="2">Option 2</mat-radio-button>
-</div>
+</mat-radio-group>
